--- a/example/index.html
+++ b/example/index.html
@@ -7,5 +7,7 @@
     <p>This is an example page.</p>
     <img src="images/example.png" alt="Example image" />
     <img src="https://avatars.githubusercontent.com/u/51394682?v=4" alt="Example image 2" />
+    <pre id="result"></pre>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
