feat: screenshot with scrolling

--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,8 @@
     <img src="https://avatars.githubusercontent.com/u/51394682?v=4" alt="Example image 2" />
     <pre id="result1"></pre>
     <pre id="result2"></pre>
+    <div style="height: 1500px;width: 300px;background: #454545;border:1px solid #a7e;"></div>
+    <p>Bottom text</p>
     <script src="scripts/script.js"></script>
 </body>
 </html>
